<resources>
    <string name="app_name">PartA</string>
    <string name="username" />
    <string name="usernamehint">Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="createusername">Username</string>
    <string name="uu" />
    <string name="first" />
    <string name="firstname">First Name</string>
    <string name="lastname" />
    <string name="lastnameedit">Last Name</string>
    <string name="gender" />
    <string name="genderhint">Gender</string>
    <string name="createpwd" />
    <string name="pwdhint">Password</string>
    <string name="signuppage">Sign Up</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="CreateTrip">Create Trip</string>
    <string name="VisitChatroom">VisitChatroom</string>
    <string name="VisitChatroom1">Visit Chatroom</string>
    <string name="DiscoverChatRooms">Discover Chatrooms</string>
    <string name="findFriends">Find Friends</string>
    <string name="Logout">Logout</string>
    <string name="fname" />
    <string name="Back" />
    <string name="Back1">Back</string>
    <string name="Edit">Edit</string>
    <string name="SaveProfile">Save Profile</string>
    <string name="viewTab">View Profile</string>
    <string name="tripname">Trip Name</string>
    <string name="LocationLatitude">Location Latitude</string>
    <string name="longitude">Location Longitude</string>
    <string name="CreateChatroom">Create Chatroom</string>
    <string name="ViewUsers">View Users</string>
    <string name="ViewTrips">View Trips</string>
    <string name="ViewChatroom">View Chatroom</string>
    <string name="Click">Add Users To Trip</string>
    <string name="FirstName">First Name:</string>
    <string name="LastName">Last Name:</string>
    <string name="Gender">Gender:</string>
    <string name="Username">Username:</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="ExitChatroom">Exit Chatroom</string>
    <string name="EditTrip">Edit Trip</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="DeleteChatroom">Delete Chatroom</string>
    <string name="Delete">Delete</string>
</resources>
