<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sceneray"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageViewSignUp"
        android:layout_width="186dp"
        android:layout_height="134dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imageicon" />

    <EditText
        android:id="@+id/editTextCreateUsername"
        android:layout_width="335dp"
        android:layout_height="55dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/createusername"
        android:inputType="textPersonName"
        android:text="@string/uu"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewSignUp"
        app:layout_constraintStart_toStartOf="@+id/imageViewSignUp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSignUp" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="336dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:text="@string/first"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextCreateUsername"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextCreateUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextCreateUsername" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="333dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/lastnameedit"
        android:inputType="textPersonName"
        android:text="@string/lastname"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextFirstName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

    <Button
        android:id="@+id/buttonSignUpPage"
        android:layout_width="197dp"
        android:layout_height="56dp"
        android:layout_marginTop="31dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:text="@string/signuppage"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextCreatePwd"
        app:layout_constraintStart_toStartOf="@+id/editTextCreatePwd"
        app:layout_constraintTop_toBottomOf="@+id/editTextCreatePwd" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="333dp"
        android:layout_height="53dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/editTextLastName"
        app:layout_constraintStart_toStartOf="@+id/editTextLastName"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="166dp"
            android:layout_height="match_parent"
            android:text="@string/Male"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="166dp"
            android:layout_height="match_parent"
            android:text="@string/Female"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="18sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextCreatePwd"
        android:layout_width="333dp"
        android:layout_height="53dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>