<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sceneray"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="336dp"
        android:layout_height="61dp"
        android:layout_marginTop="96dp"
        android:drawableBottom="@android:color/white"
        android:ems="10"
        android:hint="@string/usernamehint"
        android:inputType="textPersonName"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#E1FFFFFF"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textCursorDrawable="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="336dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:drawableBottom="@android:color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#ECE5E5"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textCursorDrawable="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="216dp"
        android:layout_height="63dp"
        android:layout_marginTop="40dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:shadowColor="@color/common_google_signin_btn_text_dark_focused"
        android:text="@string/Login"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="215dp"
        android:layout_height="66dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:text="@string/signup"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>