<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sceneray"
    tools:context=".CreateTripActivity">

    <Button
        android:id="@+id/buttonCreateTrip"
        android:layout_width="331dp"
        android:layout_height="48dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:text="@string/CreateTrip"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonAddUsers"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/buttonAddUsers"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddUsers" />

    <EditText
        android:id="@+id/editTextLocationLongitude"
        android:layout_width="337dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/longitude"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/editTextLocationLatitude"
        app:layout_constraintStart_toStartOf="@+id/editTextLocationLatitude"
        app:layout_constraintTop_toBottomOf="@+id/editTextLocationLatitude" />

    <ImageView
        android:id="@+id/tripImage"
        android:layout_width="264dp"
        android:layout_height="127dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imageicon" />

    <EditText
        android:id="@+id/editTextTripName"
        android:layout_width="337dp"
        android:layout_height="55dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/tripname"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/tripImage"
        app:layout_constraintStart_toStartOf="@+id/tripImage"
        app:layout_constraintTop_toBottomOf="@+id/tripImage" />

    <EditText
        android:id="@+id/editTextLocationLatitude"
        android:layout_width="337dp"
        android:layout_height="55dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/LocationLatitude"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/editTextTripName"
        app:layout_constraintStart_toStartOf="@+id/editTextTripName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTripName" />

    <Button
        android:id="@+id/buttonAddUsers"
        android:layout_width="331dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:text="@string/Click"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textCursorDrawable="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextLocationLongitude"
        app:layout_constraintStart_toStartOf="@+id/editTextLocationLongitude"
        app:layout_constraintTop_toBottomOf="@+id/editTextLocationLongitude" />

</androidx.constraintlayout.widget.ConstraintLayout>